@@ -1,0 +1,68 @@
+/**
+ * @author Chien
+ * @license [MIT](http://www.opensource.org/licenses/mit-license.php)
+ */
+(function ($) {
+	'use strict';
+
+	$.sceditor.locale["vi"] = {
+		"Bold": "Đậm",
+		"Italic": "Nghiêng",
+		"Underline": "Gạch chân",
+		"Strikethrough": "Gạch giữa",
+		"Subscript": "Hệ số",
+		"Superscript": "Mũ",
+		"Align left": "Căn trái",
+		"Center": "Căn giữa",
+		"Align right": "Căn phải",
+		"Justify": "Căn đều",
+		"Font Name": "Phông chữ",
+		"Font Size": "Cỡ chữ",
+		"Font Color": "Màu chữ",
+		"Remove Formatting": "Xóa định dạng",
+		"Cut": "Cắt",
+		"Your browser does not allow the cut command. Please use the keyboard shortcut Ctrl/Cmd-X": "Trình duyệt không cho phép sử dụng lệnh Cut. Vui lòng sử dụng phím tắt Ctrl/Cmd-X",
+		"Copy": "Sao chép",
+		"Your browser does not allow the copy command. Please use the keyboard shortcut Ctrl/Cmd-C": "Trình duyệt không cho phép sử dụng lệnh Copy. Vui lòng sử dụng phím tắt Ctrl/Cmd-C",
+		"Paste": "Chép vào",
+		"Your browser does not allow the paste command. Please use the keyboard shortcut Ctrl/Cmd-V": "Trình duyệt không cho phép sử dụng lệnh Paste. Vui lòng sử dụng phím tắt Ctrl/Cmd-V",
+		"Paste your text inside the following box:": "Chép nội dung text vào khung sau",
+		"Paste Text": "Chép nội dung text",
+		"Bullet list": "Danh sách kiểu nốt",
+		"Numbered list": "Danh sách kiểu số",
+		"Undo": "Hủy bỏ",
+		"Redo": "Trở lại bước trước",
+		"Rows:": "Số dòng",
+		"Cols:": "Số cột",
+		"Insert a table": "Thêm bảng",
+		"Insert a horizontal rule": "Thêm thước ngang",
+		"Code": "Mã code",
+		"Width (optional):": "Dài (không bắt buộc)",
+		"Height (optional):": "Rộng (không bắt buộc)",
+		"Insert an image": "Chèn hình ảnh",
+		"E-mail:": "E-mail",
+		"Insert an email": "Chèn email",
+		"URL:": "Liên kết",
+		"Insert a link": "Chèn liên kết",
+		"Unlink": "Bỏ liên kết",
+		"More": "Xem thêm",
+		"Insert an emoticon": "Chèn biểu tượng",
+		"Video URL:": "Đường dẫn của Video",
+		"Insert": "Thêm vào",
+		"Insert a YouTube video": "Chèn Youtube",
+		"Insert current date": "Chèn ngày hiện tại",
+		"Insert current time": "Chèn thời gian hiện tại",
+		"Print": "In ấn",
+		"View source": "Xem mã nguồn",
+		"Description (optional):": "Mô tả (không bắt buộc)",
+		"Enter the image URL:": "Nhập vào đường dẫn của hình ảnh",
+		"Enter the e-mail address:": "Nhập vào địa chỉ email",
+		"Enter the displayed text:": "Nhập vào nội dung hiển thị",
+		"Enter URL:": "Nhập vào liên kết",
+		"Enter the YouTube video URL or ID:": "Nhập vào liên kết của video hoặc ID trên Youtube",
+		"Insert a Quote": "Chèn trích dẫn",
+		"Invalid YouTube video": "Video Youtube không chính xác",
+
+		dateFormat: "day/month/year"
+	}
+})(jQuery);
