@@ -30,6 +30,8 @@ Version 1.4.0:
 		state to sceditor().
 		- Thanks to @maiiku
 	Added IE 10 support
+	Added Vietnamese translation.
+		- Thanks to Chien for translating
 
 Version 1.3.6:
 	Added Spanish translation
